tests/contract_testcases/substrate/calls/payable_functions_01.sol

        contract c {
            receive() external  {

            }
        }
        
// ---- Expect: diagnostics ----
// error: 3:13-31: receive function must be declared payable
